exports[`invalid(1): {\"workspaces\": [\"packages/*\"]} 1`] = `

[Input]
  1 | {"workspaces": ["packages/*"]}

`;

exports[`invalid(1): {\"workspaces\": [\"packages/*\"]} 2`] = `

Message:
> 1 | {"workspaces": ["packages/*"]}
    |  ^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true, "workspaces": ["packages/*"]}

`;

exports[`invalid(2): {\n\t\"name\": \"foo\",\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"workspaces": [
  4 | 		"packages/*"
  5 | 	]
  6 | }

`;

exports[`invalid(2): {\n\t\"name\": \"foo\",\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
> 3 | 	"workspaces": [
    | 	^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.
  4 | 		"packages/*"
  5 | 	]
  6 | }

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"private": true,
  4 | 	"workspaces": [
  5 | 		"packages/*"
  6 | 	]
  7 | }

`;

exports[`invalid(3): {\n\t\"name\": \"foo\",\n\t\"workspaces\": {\n\t\t\"packages\": [\n\t\t\t\"packages/*\"\n\t\t]\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"workspaces": {
  4 | 		"packages": [
  5 | 			"packages/*"
  6 | 		]
  7 | 	}
  8 | }

`;

exports[`invalid(3): {\n\t\"name\": \"foo\",\n\t\"workspaces\": {\n\t\t\"packages\": [\n\t\t\t\"packages/*\"\n\t\t]\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
> 3 | 	"workspaces": {
    | 	^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.
  4 | 		"packages": [
  5 | 			"packages/*"
  6 | 		]
  7 | 	}
  8 | }

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"private": true,
  4 | 	"workspaces": {
  5 | 		"packages": [
  6 | 			"packages/*"
  7 | 		]
  8 | 	}
  9 | }

`;

exports[`invalid(4): {\n\t\"name\": \"foo\",\n\t\"private\": false,\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"private": false,
  4 | 	"workspaces": [
  5 | 		"packages/*"
  6 | 	]
  7 | }

`;

exports[`invalid(4): {\n\t\"name\": \"foo\",\n\t\"private\": false,\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
  3 | 	"private": false,
> 4 | 	"workspaces": [
    | 	^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.
  5 | 		"packages/*"
  6 | 	]
  7 | }

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"private": true,
  4 | 	"workspaces": [
  5 | 		"packages/*"
  6 | 	]
  7 | }

`;

exports[`invalid(5): {\"workspaces\": {\"nohoist\": []}} 1`] = `

[Input]
  1 | {"workspaces": {"nohoist": []}}

`;

exports[`invalid(5): {\"workspaces\": {\"nohoist\": []}} 2`] = `

Message:
> 1 | {"workspaces": {"nohoist": []}}
    |  ^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true, "workspaces": {"nohoist": []}}

`;

exports[`invalid(6): {\"workspaces\": 1} 1`] = `

[Input]
  1 | {"workspaces": 1}

`;

exports[`invalid(6): {\"workspaces\": 1} 2`] = `

Message:
> 1 | {"workspaces": 1}
    |  ^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true, "workspaces": 1}

`;

exports[`invalid(7): {\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t],\n\t\"devDependencies\": {\n\t\t\"xo\": \"^1.0.0\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"workspaces": [
  3 | 		"packages/*"
  4 | 	],
  5 | 	"devDependencies": {
  6 | 		"xo": "^1.0.0"
  7 | 	}
  8 | }

`;

exports[`invalid(7): {\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t],\n\t\"devDependencies\": {\n\t\t\"xo\": \"^1.0.0\"\n\t}\n} 2`] = `

Message:
  1 | {
> 2 | 	"workspaces": [
    | 	^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.
  3 | 		"packages/*"
  4 | 	],
  5 | 	"devDependencies": {
  6 | 		"xo": "^1.0.0"
  7 | 	}
  8 | }

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 	"private": true,
  3 | 	"workspaces": [
  4 | 		"packages/*"
  5 | 	],
  6 | 	"devDependencies": {
  7 | 		"xo": "^1.0.0"
  8 | 	}
  9 | }

`;
